seaJs结合Less的一个拖拽功能的Demo

--- a/瀑布流/index.html
+++ b/瀑布流/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<script type="text/javascript" src="/../../../../D:/js/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="/../../../D:\jquery-1.11.1.min.js"></script>
 	<title>瀑布流</title>
 
 <script type="text/javascript">
