--- a/seaJs结合Less 拖拽功能/demo.html
+++ b/seaJs结合Less 拖拽功能/demo.html
@@ -3,18 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+
+	<link rel="stylesheet/less" type="text/css" href="css/common.less">
 	<script type="text/javascript" src="js/sea.js"></script>
 
 	<script type="text/javascript">
-
-	seajs.use('./js/test.js')
-
+	less = {compress:true}
+	seajs.use('./js/query.js')
 	</script>
-	<style type="text/css">
-		#box{width:100px;height:100px;background:#000;cursor:pointer;position:absolute;}
-		#ooo{width:200px;height:200px;background:red;display:none;position:relative;}
-		#ccc{width:50px;height:50px;background:black;vertical-align:bottom;position:absolute;right:0;bottom:0;}
-	</style>
+
 </head>
 <body>
 	
